changes in index file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>simple app</title>
 </head>
 <body>
-    
+    <h1>simple app</h1>
+    <nav>
+        <a href="">Home</a>
+        <a href="">About</a>
+    </nav>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+
+
+
+    <script src="simpleapp.js"></script>
 </body>
 </html>
