--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <a href="">Home</a>
         <a href="">About</a>
+        <a href="">Features</a>
     </nav>
     <p>Lorem ipsum dolor sit amet.</p>
     <hr>
